<resources>
    <string name="app_name">Chat With Me</string>
    <string name="avatar">Avatar</string>
    <string name="get_started">Get started</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="image_desc">An image</string>
    <string name="forgot_password"><u>I forgot my password!</u></string>
    <string name="sign_in_with_others">Or sign in with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="welcome">Hi! Let\'s start the conversations.</string>
    <string name="google_server_client_id">460167828088-qqe2hknu46n63n8r7pnvot9q9vo0skda.apps.googleusercontent.com</string>
    <string name="email_warning">Email address is invalid or doesn\'t exists.</string>
    <string name="password_warning">Password must be at least 6 characters that only contain letters or numbers.</string>
    <string name="wrong_password_warning">Incorrect password!</string>
    <string name="back_btn">back button</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="choose_from_library">Choose from library</string>

    <!--    Introduce activity values-->
    <string name="introduce_title_1">Contact via Message</string>
    <string name="introduce_title_2">Opportunities near you</string>
    <string name="introduce_title_3">Chat with your friends</string>
    <string name="introduce_title_4">John Groups</string>
    <string name="introduce_desc">Step by step instructions to create a job search website on your own in</string>

    <!--    Main activity values-->
    <string name="search_hint">Search by name</string>
    <string name="messages">Messages</string>
    <string name="online">Online</string>

    <!--    settings-->
    <string name="delay_sending">Delay Sending</string>
    <string name="night_mode">Night mode</string>
    <string name="notification">Notification</string>
    <string name="sign_out">Sign out</string>
    <string name="check_icon">Check icon</string>
    <string name="take_photo">Take photo</string>

    <string name="chat_input_hint">Aa</string>
    <string name="like_icon_link"><![CDATA[https://firebasestorage.googleapis.com/v0/b/androidchatapp-6df26.appspot.com/o/icons%2Flike_icon.png?alt=media&token=5e48d581-06a3-465a-b95f-b4413515cc11]]></string>
    <string name="friend_requests">Friend requests</string>
    <string name="add_friend">Add friend</string>
    <string name="search">Search…</string>
    <string name="no_search_result">No result were found!</string>
    <string name="send_request">Send request</string>
    <string name="username">Username</string>
    <string name="search_by">Search by:</string>
    <string name="user_id">ID</string>
    <string name="requests">Requests</string>
    <string name="sent_requests">Sent requests</string>
    <string name="received_requests">Received requests</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="sent">Sent</string>
    <string name="recall">Recall</string>
    <string name="empty_list">Empty list</string>
    <string name="send_again">Send again</string>
    <string name="sent_an_image">Sent an image</string>
    <string name="sent_a_file">Sent a file</string>
    <string name="confirm">Confirm</string>
    <string name="change_name">Change name</string>
    <string name="empty_conversation_desc">Let\'s start chatting</string>
    <string name="sending">Sending</string>
    <string name="friends">Friends</string>
    <string name="unfriend">Unfriend</string>
    <string name="received">Received</string>
    <string name="no_request">No request</string>
    <string name="add_friend_underline"><u>Add friend.</u></string>
    <string name="no_friend">"You have no friends. "</string>
    <string name="search_user">Search user</string>
    <string name="you_are_not_friends"><u>You guys are not friends!</u></string>
    <string name="check_internet_connection">Check your internet connection</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="sent_icon">Sent an icon</string>
    <string name="active_status">Active status</string>
    <string name="chat">Chat</string>
    <string name="no_message_box">You have no message box.</string>
    <string name="see_friends">See friends</string>
    <string name="languages">Languages</string>
    <string name="english">English</string>
    <string name="vietnamese">Tiếng Việt</string>
    <string name="sign_out_promt">Are you sure want to sign out?</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="received_friend_request">You have a new friend request</string>
    <string name="sent_you_friend_request">sent you a friend request</string>
    <string name="reply">Reply</string>
    <string name="receiving_notifications">Receiving notifications</string>
</resources>
